--- a/_app/index.pug
+++ b/_app/index.pug
@@ -29,6 +29,9 @@ mixin img(cl, src, alt)
 mixin imgs(cl, src, alt)
 	img(class=cl src=path+src alt=alt)
 
+<?php require_once('date/date.php');?>
+|
+|
 doctype html
 html(lang="ru")
 	head
