--- a/_app/pug/main/2-second.pug
+++ b/_app/pug/main/2-second.pug
@@ -7,10 +7,11 @@ section#second
 				p.general-text Научим быстро находить отправную точку любой проблемы и  управлять бессознательными процессами.
 				+b('mob-none', 'button-up', href, 'Записаться на мастер-клас')
 			.col-md-5.col-md-pull-6
-				.general-img.general-img-right
-					.rhomb.rhomb-second-1
+				.general-img.general-img-second
+					.rhomb.rhomb-second-1.mob-none-560
 					.rhomb.rhomb-second-2
 					.rhomb.rhomb-second-3
-					+imgs('mob-none', 'img/images/second.png','Картинка блока')
-					+imgs('d-none', 'img/images/second-mob.png', 'Картинка блока')
-				+b('d-none', 'button-up', href, 'Записаться на мастер-класс')
+					+imgs('mob-none-560', 'img/images/second.png','Картинка блока')
+					//- +imgs('d-none-560', 'img/images/second-mob.png', 'Картинка блока')
+					+imgs('d-none-560', 'img/images/second-mob.png', 'Картинка блока')
+				+b('second-button-wrapper d-none', 'button-up', href, 'Зарегистрироваться')
