--- a/_app/pug/main/4-fourth.pug
+++ b/_app/pug/main/4-fourth.pug
@@ -8,8 +8,9 @@ section#fourth
 					| Ответы на все вопросы в области предназначения, финансов, здоровья и отношений.
 				+b('mob-none', 'button-up', href, 'Записаться на мастер-класс')
 			.col-md-5.col-md-pull-6
-				.general-img.general-img-right.general-img-fourth
+				.general-img.general-img-fourth
 					.rhomb.rhomb-fourth
-					+imgs('mob-none', 'img/images/fourth.png','Картинка блока')
-					+imgs('d-none', 'img/images/fourth-mob.png', 'Картинка блока')
-				//- +b('d-none', 'button-up', href, 'Записаться на мастер-клас')
+					+imgs('mob-none-560', 'img/images/fourth.png','Картинка блока')
+					//- +imgs('d-none-560', 'img/images/fourth-mob.png', 'Картинка блока')
+					+imgs('d-none-560', 'img/images/fourth.png', 'Картинка блока')
+				+b('d-none', 'button-up', href, 'Зарегистрироваться')
