--- a/_app/pug/main/5-fifth.pug
+++ b/_app/pug/main/5-fifth.pug
@@ -7,8 +7,10 @@ section#fifth
 					|  системно-родовой терапии - 
 					span идеи Берта Хеллингера
 				p.general-text Идеи Берта Хеллингера оказали огромное влияние на современную психотерапию и получили признание в профессиональных кругах.
-				+b('', 'button-up', href, 'Записаться на мастер-клас')
+				+b('mob-none', 'button-up', href, 'Записаться на мастер-класс')
+				+b('d-none', 'button-up', href, 'Зарегистрироваться')
 			.col-md-6
-				.general-img.general-img-fifth
-					+imgs('mob-none', 'img/images/fifth.png','Картинка блока')
-					+imgs('d-none', 'img/images/fifth-mob.png','Картинка блока')
+				.general-img.general-img-right.general-img-fifth
+					+imgs('mob-none-560', 'img/images/fifth.png','Картинка блока')
+					+imgs('d-none-560', 'img/images/fifth.png','Картинка блока')
+					//- +imgs('d-none-560', 'img/images/fifth-mob.png','Картинка блока')
