--- a/_app/pug/main/6-author.pug
+++ b/_app/pug/main/6-author.pug
@@ -1,10 +1,11 @@
 section#author
 	.container
+		.col-md-6.col-md-offset-6.col-sm-6.col-sm-offset-6
+			h3.author-title
+				small Автор курса
+				| Жанна Абрамова
 		.row
-			.col-md-6.col-md-offset-6
-				h3.author-title
-					small Автор курса
-					| Жанна Абрамова
+			.col-md-6.col-md-offset-6.col-sm-6.col-sm-offset-6.col-xs-8.col-xs-offset-4
 				ul.general-list
 					li Клинический психолог, гештальт-терапевт, гипнотерапевт;
 					li Мастер практической психологии и технологий осознанности;
