--- a/_app/styl/base/1-fonts.styl
+++ b/_app/styl/base/1-fonts.styl
@@ -7,7 +7,7 @@ G = 'Gilroy', sans-serif;
 	font-weight: 900;
 	font-style: normal;
 	src: url('../fonts/FreeSetExtraCTT.eot');
-	src: url('../fonts/FreeSetExtraCTT.eot') format('embedded-opentype'),url('../fonts/FreeSetExtraCTT.woff2') format('woff2'),url('../fonts/FreeSetExtraCTT.woff') format('woff'),url('../fonts/FreeSetExtraCTT.ttf') format('truetype'),aurl('../fonts/FreeSetExtraCTT.svg#FreeSetExtraCTT') format('svg');
+	src: url('../fonts/FreeSetExtraCTT.eot') format('embedded-opentype'),url('../fonts/FreeSetExtraCTT.woff2') format('woff2'),url('../fonts/FreeSetExtraCTT.woff') format('woff'),url('../fonts/FreeSetExtraCTT.ttf') format('truetype'),url('../fonts/FreeSetExtraCTT.svg#FreeSetExtraCTT') format('svg');
 @font-face
 	font-family: 'Gilroy';
 	font-display: fallback;
