--- a/_app/pug/base/1-header-main.pug
+++ b/_app/pug/base/1-header-main.pug
@@ -1,7 +1,9 @@
 header
 	.container
 		a(href="https://iomp.ru", target="_blank")
-			img.header-logo(src=path+"img/images/header-logo.png", alt="Логотип")
+			//- img.header-logo(src=path+"img/images/header-logo.png", alt="Логотип")
+			img(class='header-logo' src=path+'img/images/logo.png'  alt='Логотип')
+			//- img(class='header-logo' src=path+'img/images/logo.png' srcset=path+'img/images/header-logo.svg' alt='Логотип')
 		.header-nav
 			ul.header-menu
 				li
