--- a/_app/pug/base/1-header-min.pug
+++ b/_app/pug/base/1-header-min.pug
@@ -1,4 +1,5 @@
 header
 	.container
 		a(href="https://iomp.ru", target="_blank")
-			img.header-logo(src=path+"img/images/header-logo.png", alt="Логотип")
+			//- img.header-logo(src=path+"img/images/header-logo.png", alt="Логотип")
+			img(class='header-logo' src=path+'img/images/logo.png'  alt='Логотип')
