--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -1,57 +1,111 @@
-#main
-	padding 0 0 100px
+// #main
+// 	padding 0 0 100px
 .rhomb-main-1
 	top 0
-	left 120px
+	// left 120px
+	left 7%
 .rhomb-main-2
-	top: 580px
-	left -150px
+	top: 450px
+	// left -150px
+	// bottom: -19%
+	left -40%
+	@media screen and (max-width 1199px)
+		top 610px
+.rhomb-main-3
+	@media screen and (max-width 991px)
+		top -26%
+		right 100px
+	@media screen and (max-width 560px)
+		top -10%
+	@media screen and (max-width 386px)
+		top -6%
+		right 30px
 .main
 	&-pre
 		color #68A599
-		font-size: 24px
+		font-size: 19px
+		@media screen and (max-width 560px)
+			font-size: 16px
 	&-title
 		font-family: F
-		// font-size: 64px
-		font-size: 54px
-		font-weight: 900
-		line-height: 50px
-		margin 14px 0 21px
+		font-size: 48px
+		line-height: 45px
+		margin 4px 0 12px
+		@media screen and (max-width 991px)
+			font-size: 44px
+			line-height: 100%
+		@media screen and (max-width 560px)
+			font-size: 36px
+			margin 10px 0 15px
+		@media screen and (max-width 386px)
+			font-size: 31px
 	&-text
-		// font-size: 26px
-		font-size: 20px
-		margin-bottom: 35px
+		font-size: 19px
+		margin-bottom: 30px
+		width 90%
+		@media screen and (max-width 1220px)
+			width 80%
+		@media screen and (max-width 991px)
+			&-1
+				width 55%
+		@media screen and (max-width 560px)
+			margin-bottom: 15px
+			font-size: 16px
+		@media screen and (max-width 386px)
+			&-1
+				width 80%
 	&-author
 		font-family: F
-		// font-size: 45px
-		font-size: 35px
-		font-weight: 900
+		font-size: 26px
 		line-height: 32px
 		color #68A599
 		margin-bottom: 10px
+		@media screen and (max-width 560px)
+			font-size: 20px
+			line-height: 100%
 	&-date
-		// font-size: 26px
-		font-size: 20px
+		font-size: 19px
 		color #68A599
-		margin-bottom: 60px
+		margin-bottom: 45px
+		span
+			display inline-block
+		@media screen and (max-width 560px)
+			font-size: 15px
+			margin-bottom: 25px
+.general-img-main
+	img
+		width 550px
+		@media screen and (max-width 1200px)
+			width 450px
+		@media screen and (max-width 1100px)
+			top 50px
+.general-img
+	.main-mob-img
+		@media screen and (max-width 991px)
+			margin: -80px 0 25px
+		@media screen and (max-width 560px)
+			margin -50px 0 25px
 .form-main
 	width 100%
-	max-width 450px
+	max-width 330px
+	@media screen and (max-width 560px)
+		max-width 241px
 .input
 	background-color #fff
 	border: 3px solid #000
 	border-radius: 50px
 	text-align left
-	padding 20px 40px
-	font-size: 22px
+	padding 12px 30px
+	font-size: 16px
+	line-height: 16px
 	font-weight: 300
 	color #706E6E
 	display block
 	width 100%
-	margin-bottom: 16px
+	margin-bottom: 12px
 	@media screen and (max-width 560px)
-		padding 20px
-		font-size: 20px
+		padding 11px 20px
+		font-size: 14px
 		margin-bottom: 16px
 ::-webkit-input-placeholder
 	color:#706E6E
@@ -88,8 +142,8 @@ input:-internal-autofill-selected
 .checking
 	display: table;
 	width 100%
-	max-width 420px
-	margin: 15px auto 0
+	max-width 300px
+	margin: 9px auto 0
 	text-align: left
 @keyframes pulse
 	0%
@@ -102,13 +156,14 @@ input:-internal-autofill-selected
 	position: relative;
 	display: table-cell;
 	vertical-align: middle;
-	padding: 0 0 0 30px;
+	padding: 0 0 0 24px;
 	text-align: left;
-	font-size: 11px
+	font-size: 8px
 	font-weight: 300
 	color #4E4C4C
-	@media screen and (max-width 386px)
-		line-height: 18px
+	@media screen and (max-width 560px)
+		padding 5px 0 0 30px
+		line-height: 12px
 .checking .check-label a
 	text-decoration: none
 	border-bottom: 1px dashed
@@ -163,3 +218,5 @@ input:-internal-autofill-selected
 	opacity: 1;
 	top: 3px;
 	transition: all 0.5s ease;
+.button-form
+	width 100%
