--- a/_app/styl/main/2-second.styl
+++ b/_app/styl/main/2-second.styl
@@ -1,11 +1,30 @@
 #second
-	padding 100px 0 250px
+	padding 200px 0 130px
+	@media screen and (max-width 991px)
+		padding 100px 0
+		@media screen and (max-width 560px)
+			padding 65px 0
 .rhomb-second-1
 	top -50px
-	right 150px
+	// right 150px
+	right 30%
+	@media screen and (max-width 991px)
+		top 0
+		// right 27%
 .rhomb-second-2
-	top: 300px
-	right -80px
+	top: 250px
+	// right -80px
+	right -16%
 .rhomb-second-3
-	top 600px
-	right -550px
+	top 470px
+	// right -550px
+	right -97%
+.second-button-wrapper
+	@media screen and (max-width 386px)
+		margin-top: -20px
+		z-index 999
+.general-img-second
+	img
+		width 445px
+		@media screen and (max-width 991px)
+			width auto
