--- a/_app/styl/main/3-third.styl
+++ b/_app/styl/main/3-third.styl
@@ -1,14 +1,35 @@
 #third
-	padding 200px 0 560px
+	padding 155px 0 130px
 	background-color: #C5C7C6
 	background-image: url(../img/backs/third.png)
 	background-repeat: no-repeat
 	background-position: center
 	background-size: cover
-	min-height 1070px
+	min-height 862px
+	@media screen and (max-width 991px)
+		// min-height 1px
+		// padding 50px 0 200px
+		background-position: center left 35%
+		margin-bottom: 70px
+	@media screen and (max-width 710px)
+		background-position: center left 40%
+	@media screen and (max-width 650px)
+		background-position: center left 44%
+	@media screen and (max-width 560px)
+		background-image: url(../img/backs/third-mob.png)
+		padding 50px 0 140px
+		min-height 515px
+		background-position: center left 24%
+	@media screen and (max-width 500px)
+		background-position: center
+	@media screen and (max-width 386px)
+		min-height: 370px
+		background-position: center right
+		padding 20px 0 140px
+		margin-bottom: 30px
 .rhomb-third-1
-	top -150px
-	left -100px
+	top -105px
+	left -15%
 .rhomb-third-2
-	top 220px
-	right 0
+	top 90px
+	right 36%
