--- a/_app/styl/main/4-fourth.styl
+++ b/_app/styl/main/4-fourth.styl
@@ -1,8 +1,19 @@
 #fourth
 	padding 260px 0 100px
+	@media screen and (max-width 991px)
+		padding 100px 0
 .general-img-fourth
 	img
 		top -150px
+		width 476px
+		@media screen and (max-width 1100px)
+			width 390px
+			top -50px
+		@media screen and (max-width 991px)
+			margin: -50px 0 35px
+			width auto
 .rhomb-fourth
-	bottom: 0
+	bottom: 130px
 	right -200px
+	@media screen and (max-width 1199px)
+		bottom: -150px
