--- a/_app/styl/main/5-fifth.styl
+++ b/_app/styl/main/5-fifth.styl
@@ -1,5 +1,16 @@
 #fifth
-	padding 150px 0
+	padding 50px 0 0
+	@media screen and (max-width 991px)
+		padding 0 0 60px
 .general-img-fifth
 	img
 		top -50px
+		width 550px
+		@media screen and (max-width 1190px)
+			top 0
+			width 500px
+		@media screen and (max-width 1060px)
+			width 450px
+		@media screen and (max-width 991px)
+			width auto
+			margin-top: 45px
