--- a/_app/styl/main/7-revs.styl
+++ b/_app/styl/main/7-revs.styl
@@ -1,19 +1,23 @@
 #revs
-	padding 130px 0
+	padding 200px 0
+	@media screen and (max-width 991px)
+		padding 65px 0 0
 .text-rev-link
 	padding 20px
 .revs-slider-text.slick-slider
 	width 100%
 	max-width 1920px
-	margin 120px auto 0
+	margin 70px auto 0 
 	position relative
 	z-index 10
 	@media screen and (max-width 991px)
-		margin-top: 40px
+		margin: 80px 0 130px
 	@media screen and (max-width 560px)
-		margin-bottom: 120px
-	@media screen and (max-width 385px)
-		margin-bottom: 100px
+		margin: 0 0 65px
+	// @media screen and (max-width 560px)
+	// 	margin-bottom: 120px
+	// @media screen and (max-width 385px)
+	// 	margin-bottom: 100px
 	.slick-track
 		padding-bottom: 20px
 	// .slick-arrow
@@ -26,18 +30,33 @@
 		&:before
 			content: none
 		left 32%
+		@media screen and (max-width 991px)
+			left 2%
+		@media screen and (max-width 560px)
+			left 0
+		@media screen and (max-width 386px)
+			left -1%
 	.slick-next
 		left auto
 		right 32%
+		@media screen and (max-width 991px)
+			right auto
+			right 2%
+		@media screen and (max-width 560px)
+			right 0
+		@media screen and (max-width 386px)
+			right -1%
 // .slick-slide
 // 	transition: all .3s ease
 .revs-slider-text.slick-slider
 	.slick-track
+		
 		padding-top: 20px
 		@media screen and (max-width 480px)
 			padding-bottom: 45px
 	.slick-center
 		transform scale(1.08)
+		transition: all .3s ease
 		position relative
 		top 16px
 // .slick-dots
@@ -81,11 +100,17 @@
 	background: #fff;
 	border: 3px solid #E5E5E5
 	border-radius: 80px
-	min-height 400px
+	min-height 300px
 	// object-fit: contain
 	// object-position: center
 	// height 825px
 	background-color: #fff
+	@media screen and (max-width 991px)
+		max-width 400px
+	@media screen and (max-width 560px)
+		max-width 260px
+		min-height 1px
+		border-radius: 50px
 	// @media screen and (max-width 1199px)
 	// 	height 200px
 	// @media screen and (max-width 991px)
