--- a/css/promo.css
+++ b/css/promo.css
@@ -4,7 +4,7 @@
   font-weight: 900;
   font-style: normal;
   src: url("../fonts/FreeSetExtraCTT.eot");
-  src: url("../fonts/FreeSetExtraCTT.eot") format('embedded-opentype'), url("../fonts/FreeSetExtraCTT.woff2") format('woff2'), url("../fonts/FreeSetExtraCTT.woff") format('woff'), url("../fonts/FreeSetExtraCTT.ttf") format('truetype'), aurl('../fonts/FreeSetExtraCTT.svg#FreeSetExtraCTT') format('svg');
+  src: url("../fonts/FreeSetExtraCTT.eot") format('embedded-opentype'), url("../fonts/FreeSetExtraCTT.woff2") format('woff2'), url("../fonts/FreeSetExtraCTT.woff") format('woff'), url("../fonts/FreeSetExtraCTT.ttf") format('truetype'), url("../fonts/FreeSetExtraCTT.svg#FreeSetExtraCTT") format('svg');
 }
 @font-face {
   font-family: 'Gilroy';
@@ -52,6 +52,14 @@ body {
   background-color: #fff;
   line-height: 1.56;
 }
+@media screen and (max-width: 560px) {
+  body {
+    font-size: 16px;
+  }
+}
+p {
+  line-height: 1.3;
+}
 .wrapper {
   overflow: hidden;
 }
@@ -60,27 +68,9 @@ body {
   z-index: 30;
 }
 .container {
-  width: 1600px;
-}
-@media screen and (max-width: 1600px) {
-  .container {
-    width: 1280px;
-  }
-}
-@media screen and (max-width: 1300px) {
-  .container {
-    width: 1170px;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .container {
-    width: 970px;
-  }
-}
-@media screen and (max-width: 991px) {
-  .container {
-    width: 750px;
-  }
+  width: 90%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 @media screen and (max-width: 767px) {
   .container {
@@ -162,13 +152,14 @@ footer {
   text-decoration: none;
   color: #000;
   width: auto;
-  padding: 20px 123px;
+  padding: 13px 80px;
   background: #fff;
   border: 3px solid #000;
   -webkit-border-radius: 45px;
      -moz-border-radius: 45px;
           border-radius: 45px;
-  font-size: 20px;
+  font-size: 16px;
+  line-height: 16px;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -185,9 +176,24 @@ footer {
   background-color: #000;
   font-weight: bold;
 }
+.button-wrapper {
+  position: relative;
+}
 @media screen and (max-width: 560px) {
   .button {
-    padding: 20px 30px;
+    background-color: #000;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 30px;
+  }
+  .button:focus {
+    text-decoration: none;
+    color: #fff;
+  }
+  .button:hover {
+    text-decoration: none;
+    color: #000;
+    background-color: #fff;
   }
 }
 .general-title {
@@ -195,21 +201,35 @@ footer {
   font-size: 36px;
   font-weight: 900;
   line-height: 36px;
-  margin-bottom: 36px;
+  margin-bottom: 16px;
 }
 .general-title span {
   color: #68a599;
 }
+@media screen and (max-width: 560px) {
+  .general-title {
+    font-size: 24px;
+    line-height: 26px;
+    margin-bottom: 25px;
+  }
+}
 .general-text {
   font-size: 20px;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 560px) {
+  .general-text {
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
 }
 .d-none {
   display: none;
 }
 @media screen and (max-width: 991px) {
   .d-none {
-    display: inline-block;
+    display: block;
   }
 }
 @media screen and (max-width: 991px) {
@@ -217,9 +237,27 @@ footer {
     display: none;
   }
 }
+.d-none-560 {
+  display: none;
+}
+@media screen and (max-width: 560px) {
+  .d-none-560 {
+    display: block;
+  }
+}
+@media screen and (max-width: 560px) {
+  .mob-none-560 {
+    display: none;
+  }
+}
 .general-img {
   position: relative;
   padding-top: 100%;
+}
+@media screen and (max-width: 991px) {
+  .general-img {
+    padding-top: 0;
+  }
 }
 .general-img img {
   width: auto;
@@ -227,14 +265,26 @@ footer {
   top: 0;
   left: 0;
 }
+@media screen and (max-width: 991px) {
+  .general-img img {
+    position: static;
+    width: auto;
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 386px) {
+  .general-img img {
+    margin: 0 auto;
+  }
+}
 .general-img-right img {
   left: auto;
   right: 0;
 }
 .rhomb {
   position: absolute;
-  width: 16px;
-  height: 16px;
+  width: 14px;
+  height: 14px;
   -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
@@ -249,39 +299,59 @@ footer {
   width: 131px;
   height: 131px;
 }
+@media screen and (max-width: 560px) {
+  .rhomb {
+    width: 8px;
+    height: 8px;
+  }
+}
 .general-list li {
   list-style: none;
-  margin-bottom: 20px;
-  font-size: 20px;
+  margin-bottom: 30px;
+  font-size: 19px;
   position: relative;
   padding-left: 26px;
+  line-height: 1.3;
 }
 .general-list li:before {
   content: '';
   display: block;
   position: absolute;
-  top: 9px;
+  top: 7px;
   left: 0;
   -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
        -o-transform: rotate(45deg);
           transform: rotate(45deg);
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   background-color: #68a599;
+}
+@media screen and (max-width: 560px) {
+  .general-list li {
+    font-size: 16px;
+    margin-bottom: 10px;
+    line-height: 18px;
+    padding-left: 15px;
+  }
+  .general-list li:before {
+    width: 5px;
+    height: 5px;
+    top: 5px;
+  }
 }
 header {
   overflow: hidden;
   padding: 20px 0;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 header .container {
   z-index: auto;
 }
 .header-logo {
   float: left;
-  width: auto;
+  width: 100px;
 }
 .header-menu {
   float: right;
@@ -293,7 +363,7 @@ header .container {
   margin-left: 20px;
 }
 .header-menu li a {
-  font-size: 16px;
+  font-size: 15px;
   color: #000;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -397,7 +467,11 @@ header .container {
   .mobile-menu {
     display: block;
   }
+  .header-menu {
+    float: none;
+  }
   .header-menu li {
+    display: block;
     margin-bottom: 20px;
   }
 }
@@ -408,14 +482,12 @@ header .container {
   .header-logo {
     float: none;
     display: inline-block;
+    width: 70px;
   }
 }
 @media screen and (max-width: 560px) {
   header {
     margin-bottom: 10px;
-  }
-  .header-logo {
-    height: 40px;
   }
   .mobile-menu {
     top: 20px;
@@ -553,12 +625,6 @@ footer {
 @media screen and (max-width: 991px) {
   footer {
     padding: 30px 0;
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 767px) {
-  footer {
-    text-align: center;
   }
 }
 @media screen and (max-width: 560px) {
@@ -569,11 +635,12 @@ footer {
 }
 .footer-logo {
   margin-bottom: 40px;
+  width: 100px;
 }
 @media screen and (max-width: 767px) {
   .footer-logo {
     margin-bottom: 30px;
-    width: 100px;
+    width: 70px;
   }
 }
 @media screen and (max-width: 560px) {
@@ -595,11 +662,6 @@ footer {
 @media screen and (max-width: 991px) {
   .footer-text-right {
     text-align: left;
-  }
-}
-@media screen and (max-width: 767px) {
-  .footer-text-right {
-    text-align: center;
   }
 }
 .footer-hr {
